--- a/week3/hw3.ipynb
+++ b/week3/hw3.ipynb
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
     "        return [self.documents[i] for i in idx]\n",
     "\n",
     "search_engine = VectorSearchEngine(documents=ml_documents, embeddings=X)\n",
-    "search_engine.search(v, num_results=5)"
+    "#search_engine.search(v, num_results=5)"
    ]
   },
   {
